# process-text

./: .gitignore  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
src/process_text/: init.py
src/process_text/.ipynb_checkpoints/: transforms-checkpoint.py
tests/: Cleaning Hotel Reviews Data.ipynb
