[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akoang-library"
version = "0.1.0"
description = "A lightweight text preprocessing toolkit with tokenization, stopword removal, stemming, lemmatization, and emoji/special character cleaning."
authors = [
    { name="Jhun Brian Andam" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["nlp", "preprocessing", "text-cleaning", "machine-learning"]

dependencies = [
    "regex",
    "nltk",
    "contractions",
    "textblob"
]

[project.urls]
Homepage = "https://github.com/JhunBrian/process-text"
Repository = "https://github.com/JhunBrian/process-text"
